testsuite/tests/interpreter_errors/invalid_from_select/test.out
script.lkql:2:12: error: Wrong kind of element in `from clause`
2 | print(from 2 select *)
  |            ^ 

